test/e2e/testdata/nginx/app-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-root
  namespace: ingress2eg
  annotations:
    nginx.ingress.kubernetes.io/app-root: /app
spec:
  ingressClassName: nginx
  rules:
  - host: approot.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-server
            port:
              number: 8080
