test/e2e/testdata/nginx/auth-tls-secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-tls
  namespace: ingress2eg
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: ingress2eg/ca-secret
spec:
  ingressClassName: nginx
  rules:
  - host: mtls.example.com
    http:
      paths:
      - path: /secure
        pathType: Prefix
        backend:
          service:
            name: echo-server
            port:
              number: 8080
  tls:
  - hosts:
    - mtls.example.com
    secretName: tls-secret
