test/e2e/testdata/nginx/header-manipulation.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upstream-vhost
  namespace: ingress2eg
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: "internal.backend.svc.cluster.local"
spec:
  ingressClassName: nginx
  rules:
  - host: vhost.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-server
            port:
              number: 8080
