test/e2e/testdata/nginx/proxy-body-size.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-body-size
  namespace: ingress2eg
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1k"
spec:
  ingressClassName: nginx
  rules:
  - host: body-size.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-server
            port:
              number: 8080
