test/e2e/testdata/nginx/ssl-passthrough.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-passthrough
  namespace: ingress2eg
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: passthrough.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-tls
            port:
              number: 8443
  tls:
  - hosts:
    - passthrough.example.com
    secretName: tls-secret
